# logistro

./: .gitignore  .markdown.rb  .pre-commit-config.yaml  CHANGELOG.txt  README.md  TECH_NOTE.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish_all.yml  publish_testpypi.yml  test.yml
docs/: README.md  style.css
logistro/: __init__.py  _api.py  _args.py  args.py  custom_logging.py
site/: 404.html  index.html  search.html  sitemap.xml
site/TECH_NOTE/: index.html
site/api/logistro/: index.html
site/css/: api.css  theme.css
site/search/: search_index.json
tests/: conftest.py  test_logistro.py
