[build-system]
requires = ["setuptools>=65.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "logistro"
description = "Simple wrapper over logging for a couple basic features"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
authors = [
  {name = "Andrew Pikul", email="ajpikul@gmail.com"},
  {name = "Neyberson Atencio", email="neyberatencio@gmail.com"}
  ]
maintainers = [
  {name = "Andrew Pikul", email = "ajpikul@gmail.com"},
]

[dependency-groups]
dev = [
    "poethepoet>=0.31.1",
    "pytest-xdist",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
log_cli = true

[tool.poe.tasks.test]
cmd = "pytest -W error -n auto -rfE"
help = "Run all tests quickly"

[tool.poe.tasks.debug-test]
cmd = "pytest -W error -vvvx -rA"
help = "Run test by test, slowly, quitting after first error"

[tool.poe.tasks.filter-test]
cmd = "pytest -W error -vvvx -rA"
help = "Run any/all tests one by one with basic settings: can include filename and -k filters"
